à revoir : achat => détails cars => contacter => message

--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=1eb23eed9f14fd1a3ebfecf6248f4ba6
+APP_DEBUG=1
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -35,7 +36,6 @@ APP_SECRET=1eb23eed9f14fd1a3ebfecf6248f4ba6
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
-
 ###> symfony/mailer ###
 # .env
 ###< symfony/mailer ###
